--- a/style.css
+++ b/style.css
@@ -99,9 +99,14 @@ p{
     border-radius: 90px ;
     opacity: 0px;
     background-color: var(--btn-color);
+    background: linear-gradient(to right ,#FE8C45 50%, #8A47F6 50%);
+    background-size: 200% 100%;
     transition: all .4s ease-out 0s;
 }
-
+.main-btn:hover{
+    color: azure;
+    background-position: right bottom;
+}
 /* custom css end */
 /* =============================== */
 /* navber css start */
@@ -142,6 +147,7 @@ p{
 
 /* navber on scroll css start */
 /* =============================== */
+
 .navigation-wrap.scroll-on{
     position: fixed;
     background-color: #ffffff;
@@ -166,6 +172,19 @@ p{
 #home{
     height: 700px;
     width: 100%;
+}
+.home{
+    position: relative;
+    top: -500px;
+}
+.hhh{
+    width: 454px;
+    height: 454px;
+    top: -37px;
+    left: -68px;
+    gap: 0px;
+    opacity: 0.15px;
+    
 }
 .home-text{
     margin-top: 200px;
@@ -199,7 +218,16 @@ p{
 /* ========================== */
 /* portfolio css start */
 /* ========================== */
-
+.portfolio{
+    width: 100%;
+    height: 1100px;
+   
+}
+.portfolio .ppp{
+    width: 454px;
+    height: 454px;
+    
+}
 .potfolio-nav{
     margin-bottom: 20px;
     width: 100%;
@@ -221,11 +249,28 @@ p{
 /* portfolio css end*/
 /* ========================== */
 /* prices css start*/
+.prices{
+    width: 100%;
+}
+
 .prices .card{
     width: 320px !important;
     height: 417px !important;
     border-radius: 15px ;
     box-shadow: 0px 0px 18px 0px #00000026;
+}
+.card{
+    transition: all 1s ease-in;
+}
+.card:hover {
+    background-color: var(--text-color);
+    color: var(--bg-color);
+}
+.card:hover .card-text{
+    color: var(--bg-color);
+}
+.card:hover .money{
+    color: var(--bg-color);
 }
 .prices .card-title{
     font-size: 24px;
@@ -268,4 +313,110 @@ p{
    font-size: 22px;
    font-weight: 500;
    line-height: 22px;
+}
+/* ========================== */
+/* Testimonials css end*/
+
+/* feed section start==========================*/
+.feed-img{
+    width: 98%;
+    height: 700px;
+    position: relative;
+    top: 100px;
+}
+/* feed section end==========================*/
+/* contact section start */
+.contact{
+    width: 99%;
+    height: 700px; 
+}
+.contact input{
+    width: 100% !important;
+}
+.contact textarea{
+    width: 90%;
+    height: 180px;
+}
+.contact label{
+    margin-top: 15px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: left;
+}
+.contact .touch{
+    width: 350px;
+    height: 400px;
+    background-color:#EDE3FE ;
+    border-radius: 15px;
+   position: relative;
+   top: 200px;
+   left: 150px;
+}
+.contact .touch h2{
+    font-size: 34px;
+    font-weight: 600;
+    line-height: 34px;
+    text-align: left;
+}
+.contact .touch .icon{
+    background-color: var(--primary-color) ;
+    width: 31px;
+    height: 31px;
+    border-radius: 50%;
+    margin-right: 11px;
+}
+.contact .touch i{
+    text-align: center;
+    position: relative;
+    top: 2px;
+    left: 10px;
+    color: #F3EDFE;
+}
+.contact .touch h6{
+font-size: 22px;
+font-weight: 600;
+line-height: 22px;
+text-align: left;
+color: var(--text-color);
+}
+.contact .touch small{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: left;
+    color: var(--text-color);
+    position: relative;
+    top: -7px;
+}
+/* contact section end */
+/* footer section start */
+#footer{
+    background-color: var(--secondry-color);
+    width: 100%;
+    height: 200px;
+    padding: 10px;
+}
+.footer a{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 18px;
+    color: #ffffff;
+
+}
+.footer-icon{
+    width: 49px;
+    height: 49px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    position: relative;
+    top: -10px;
+    left: 100px;
+}
+.footer-icon i{
+    color: var(--secondry-color);
+    font-size: 30px;
+    position: relative;
+    top: 8px;
+    left: 8px;
 }
